--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
       content="Web site created using create-react-app"
     />
     <title>Untitled Finance Tracker</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
